<resources>

    //GENERAL
    <string name="app_name">NakaDesignsApp</string>
    <string name="app_title">Naka Designs</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_main">MainActivity</string>

    ////////////////////////////////////////////////////////////////////////////////////////////////

    //LOGIN ACTIVITY
    <string name="login_button">Login</string>
    <string name="login_editText_email">Email</string>
    <string name="login_editText_password">Password</string>

    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    ////////////////////////////////////////////////////////////////////////////////////////////////

    //NAVIGATION DRAWER
    <string name="category_item">Category</string>
    <string name="product_item">Product</string>
    <string name="employee_item">Employee</string>
    <string name="basket_item">Basket</string>
    <string name="log_out_item">Log out</string>
    <string name="configuracion_item">Configuration</string>
    <string name="title_activity_product">ProductActivity</string>

    ////////////////////////////////////////////////////////////////////////////////////////////////

    //MAIN ACTIVITY

        //CATEGORY
        <string name="category_itemView_tabSpec_name">CATEGORY_ITEM_VIEW</string>
        <string name="category_itemView_tabSpec_indicator">ItemView</string>

        <string name="category_listView_tabSpec_name">CATEGORY_LIST_VIEW</string>
        <string name="category_listView_tabSpec_indicator">ListView</string>

        <string name="category_insertView_tabSpec_name">CATEGORY_INSERT_VIEW</string>
        <string name="category_insertView_tabSpec_indicator">InsertView</string>

        //PRODUCT
        <string name="product_itemView_tabSpec_name">PRODUCT_ITEM_VIEW</string>
        <string name="product_itemView_tabSpec_indicator">ItemView</string>

        <string name="product_listView_tabSpec_name">PRODUCT_LIST_VIEW</string>
        <string name="product_listView_tabSpec_indicator">ListView</string>

        <string name="product_insertView_tabSpec_name">PRODUCT_INSERT_VIEW</string>
        <string name="product_insertView_tabSpec_indicator">InsertView</string>

        //EMPLOYEE
        <string name="employee_itemView_tabSpec_name">EMPLOYEE_ITEM_VIEW</string>
        <string name="employee_itemView_tabSpec_indicator">ItemView</string>

        <string name="employee_listView_tabSpec_name">EMPLOYEE_LIST_VIEW</string>
        <string name="employee_listView_tabSpec_indicator">ListView</string>

        <string name="employee_insertView_tabSpec_name">EMPLOYEE_INSERT_VIEW</string>
        <string name="employee_insertView_tabSpec_indicator">InsertView</string>

        //BASKET
        <string name="basket_itemView_tabSpec_name">BASKET_ITEM_VIEW</string>
        <string name="basket_itemView_tabSpec_indicator">ItemView</string>

        <string name="basket_listView_tabSpec_name">BASKET_LIST_VIEW</string>
        <string name="basket_listView_tabSpec_indicator">ListView</string>

        <string name="basket_insertView_tabSpec_name">BASKET_INSERT_VIEW</string>
        <string name="basket_insertView_tabSpec_indicator">InsertView</string>

        <!-- TODO: Remove or change this placeholder text -->
        <string name="hello_blank_fragment">Hello blank fragment</string>

        //LISTVIEW
        <string name="listView_item_title"></string>
        <string name="listView_item_subtitle"></string>



</resources>