<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_category"
            android:checked="true"
            android:icon="@drawable/category_128x128"
            android:title="@string/category_item" />
        <item
            android:id="@+id/nav_product"
            android:icon="@drawable/product1_128x128"
            android:title="@string/product_item" />
        <item
            android:id="@+id/nav_employee"
            android:icon="@drawable/employee1_128x128"
            android:title="@string/employee_item" />
        <item
            android:id="@+id/nav_basket"
            android:icon="@drawable/shopping_cart1_128x128"
            android:title="@string/basket_item" />

        <!-- Sección de configuración -->
        <item
            android:id="@+id/configuration_section"
            android:title="@string/configuracion_item">
            <menu>
                <item
                    android:id="@+id/nav_log_out"
                    android:icon="@android:drawable/ic_lock_power_off"
                    android:title="@string/log_out_item" />
            </menu>
        </item>
    </group>

</menu>